criei o arquino idex

--- a/index.html
+++ b/index.html
@@ -5,10 +5,129 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>titulo do site</h1>
+    <h1 class="titulo">titulo do site</h1>
 
-    <p>emily</p>
+    <p id="primeiro-p">Esse é o Noguera, porra
+        Felypinho 013 manda pr's mina sapeca
+        Aí DJ Pablo RB, vem com bigodinho de Hitler
+        Que minha pepeca é terrorista
+        Pipokinha, princesa da putaria
+        Bota, bota o bigode na minha xota
+        Bota, bota, bota o bigode na minha xota
+        De quatro que entra tudo, dá um tesão do caralho
+        De quatro, de quatro
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota, bota o bigode na minha xota
+        Bota, bota, bota o bigode na minha xota
+        De quatro que entra tudo, dá um tesão do caralho (esse é o Noguera, porra)
+        De quatro, de quatro (Felypinho 013 manda pr'as mina sapeca)
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+    </p>
+
+    <p>Esse é o Noguera, porra
+        Felypinho 013 manda pr's mina sapeca
+        Aí DJ Pablo RB, vem com bigodinho de Hitler
+        Que minha pepeca é terrorista
+        Pipokinha, princesa da putaria
+        Bota, bota o bigode na minha xota
+        Bota, bota, bota o bigode na minha xota
+        De quatro que entra tudo, dá um tesão do caralho
+        De quatro, de quatro
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota, bota o bigode na minha xota
+        Bota, bota, bota o bigode na minha xota
+        De quatro que entra tudo, dá um tesão do caralho (esse é o Noguera, porra)
+        De quatro, de quatro (Felypinho 013 manda pr'as mina sapeca)
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+
+
+    </p>
+
+    <p>Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na Pipokinha
+        Bota na, bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+        Bota na, bota na, bota na
+        Bota na Pipokinha
+
+
+
+    </p>
 </body>
 </html>
